Added contribute part

--- a/README.html
+++ b/README.html
@@ -82,6 +82,7 @@ img {
 <li><a href="#coding-efficiency-in-r"><span class="toc-section-number">0.3.1</span> Coding efficiency in R</a></li>
 <li><a href="#high-performance-computing-hpc"><span class="toc-section-number">0.3.2</span> High performance computing (HPC)</a></li>
 </ul></li>
+<li><a href="#contribute"><span class="toc-section-number">1</span> Contribute</a></li>
 </ul>
 </div>
 
@@ -199,6 +200,10 @@ img {
 <p>Computing is central to modern science, the following paper provides a gentle introduction to high performance computing - aimed at biologists - but it is suited for any-level R users. <a href="http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1004140">A tutorial on HPC for biologist</a></p>
 <p>The paper includes a detailed tutorial, suitable for classroom use, provinding step-by-step explanations of profiling (using aprof), parallel computing and calling C from R is provided in <a href="http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1004140#sec017">the supplemental material</a>.</p>
 </div>
+</div>
+<div id="contribute" class="section level1">
+<h1><span class="header-section-number">1</span> Contribute</h1>
+<p>As R, this repro should always be evolving and in a stage of development. Do you have any ideas on how we can improve it? We’ll be happy to hear them so please contribute! You can make suggestion <a href="https://github.com/TalkStats/R_recomendations/issues">here</a>, or just fork the repro and make a pull request!</p>
 </div>
 
 
