HPC link fixed?

--- a/README.html
+++ b/README.html
@@ -80,7 +80,7 @@ img {
 </ul></li>
 <li><a href="#advanced"><span class="toc-section-number">0.3</span> Advanced</a><ul>
 <li><a href="#coding-efficiency-in-r"><span class="toc-section-number">0.3.1</span> Coding efficiency in R</a></li>
-<li><a href="#high-performance-computing-hpc"><span class="toc-section-number">0.3.2</span> High performance computing (HPC)</a></li>
+<li><a href="#speeding-up-r-and-topics-on-high-performance-computing-hpc"><span class="toc-section-number">0.3.2</span> Speeding up R, and topics on High performance computing (HPC)</a></li>
 </ul></li>
 <li><a href="#contribute"><span class="toc-section-number">1</span> Contribute</a></li>
 </ul>
@@ -194,8 +194,8 @@ img {
 <p>A guide on how to program effectively in R, from easy to advanced <a href="http://www.burns-stat.com/documents/books/the-r-inferno/">The R inferno</a></p>
 <p>A quick guide on using profiling to find bottlenecks in your code is given <a href="http://marcodvisser.github.io/aprof/Quickstart.html">here</a>.</p>
 </div>
-<div id="high-performance-computing-hpc" class="section level3">
-<h3><span class="header-section-number">0.3.2</span> High performance computing (HPC)</h3>
+<div id="speeding-up-r-and-topics-on-high-performance-computing-hpc" class="section level3">
+<h3><span class="header-section-number">0.3.2</span> Speeding up R, and topics on High performance computing (HPC)</h3>
 <p><a href="http://cran.r-project.org/web/views/HighPerformanceComputing.html">The CRAN taskview on HPC</a></p>
 <p>Computing is central to modern science, the following paper provides a gentle introduction to high performance computing - aimed at biologists - but it is suited for any-level R users. <a href="http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1004140">A tutorial on HPC for biologist</a></p>
 <p>The paper includes a detailed tutorial, suitable for classroom use, provinding step-by-step explanations of profiling (using aprof), parallel computing and calling C from R is provided in <a href="http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1004140#sec017">the supplemental material</a>.</p>
